[package]
name = "tl-flash"
version = "0.1.0"
authors = ["codetector <codetector@codetector.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serialport = "^3.3.0"
structopt = "^0.3.8"
log = "^0.4.8"
env_logger = "^0.7.1"